--- a/views/indexAir.ejs
+++ b/views/indexAir.ejs
@@ -11,11 +11,12 @@
     <h1>Air Character Index Page</h1>
     <ul>
         <% for(var i=0; i < airChars.length; i++){ %>
-            <li>
-                The <a href="/airChar/<%=i%>">
+            <br>
+                <a href="/airChar/<%=i%>">
                     <%=airChars[i].name; %>
-                </a> is
-                <%=airChars[i].town; %>. <% if(airChars[i].mainChar===true){ %> They are a main character <% } else { %>
+                </a> was first introduced in 
+                <%=airChars[i].town; %>. 
+                <% if(airChars[i].mainChar===true){ %> They are a main character <% } else { %>
                             They are not a main character <% } %>
                                 <form action="/airChar/<%=i; %>?_method=DELETE" method="POST">
                                     <input type="submit" value="DELETE" />
